tests/errors/polymorphism_id_id.eff
let u x = x;;
let v = u u;;
(v 42, v "foo");;

